Добавление метода получение сводной статистики. Включение хранилища изображений MongoGridFS
