# swagger-ui/swagger.yaml
@@ -27,18 +27,22 @@ servers:
 tags:
   - name: Авторизация
     description: Вход в учётную запись / регистрация / выход
-  - name: Посты
-    description: Работа с постами
   - name: Пользователи
     description: Работа с учётными данными пользователей
+  - name: Посты
+    description: Работа с постами
   - name: Тэги
     description: Просмотр и модификация тегов
   - name: Комментарии
     description: Просмотр и редактирование комментариев
   - name: Карма
     description: Методы добавления кармы и отслеживания действий, связанных с ней
+  - name: Хранилище
+    description: Методы загрузки и получения изображений из файлового хранилища
+  - name: Статистика
+    description: Методы запроса статистики о состоянии сервера
   - name: Пинг
-    description: Проверка свзязи
+    description: Отладочные методы для проверки соединения с сервером и проч.
 paths:
   /:
     get:
@@ -792,6 +796,31 @@ paths:
           description: Недостаточно доступа
         '403':
           description: Проблема авторизации
+  /storage/{id}:
+    get:
+      tags:
+        - "Хранилище"
+      summary: Получить изображение с заданным ID
+      responses:
+        '200':
+          description: Успешная операция
+  /storage/upload:
+    post:
+      tags:
+        - "Хранилище"
+      summary: Загрузить изображение в файловое хранилище и получить его ID в случае успеха
+      responses:
+        '200':
+          description: Успешная операция
+
+  /statistics/general:
+    get:
+      tags:
+        - "Статистика"
+      summary: Получить общую информацию о состоянии сервера, а также подсчитать наполнение основных таблиц Базы Данных
+      responses:
+        '200':
+          description: Успешная операция
 components:
   schemas:
     User:
